2009-12-14  Adam Langley  <agl@google.com>

Reviewed by Darin Adler.

        Test that an image's size is valid before reading it.

        Previously, an image that failed to load (m_failed == true) would
        trigger an assertion failure when WebKit tried to get its size.

        https://bugs.webkit.org/show_bug.cgi?id=32176
        http://code.google.com/p/chromium/issues/detail?id=28566

        Test: fast/images/size-failure.html

        * platform/graphics/ImageSource.cpp:
        (WebCore::ImageSource::createFrameAtIndex):

Canonical link: https://commits.webkit.org/43526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52102 268f45cc-cd09-0410-ab3c-d52691b4dbfc